@@ -1,3 +1,4 @@
+3/1/11 dev version that creates molecules stacks from bottom up, to correspond to behavior of spinner arrows and bar charts
 # 0.00.11 (49382) Mar 1, 2011
 3/1/11 dev version that adds support for decomposition reactions
 3/1/11 change request: add layout support for decomposition reactions (1 reactant, 2 products)
